# spectrogram-drone-detection

./: .gitignore  LICENSE  README.md  model_summary.txt  pyproject.toml
configs/: default.yaml  lightweight.yaml
scripts/: add_kaggle_to_splits.py  add_zenodo_to_splits.py  download_data.py  evaluate.py  export_model.py  fetch_external_test.py  fetch_fpv_drone_test.py  fetch_kaggle_balanced_test.py  infer_file.py  predict.py  train.py
src/dronedetection/data/: features.py
src/dronedetection/evaluation/: analysis.py  metrics.py
src/dronedetection/inference/: export.py  predictor.py
src/dronedetection/models/: efficientnet.py  factory.py  lightweight.py
src/dronedetection/training/: losses.py  scheduler.py  trainer.py
src/dronedetection/utils/: config.py  logging.py  seed.py
tests/: conftest.py  test_augmentation.py  test_features.py  test_inference.py  test_metrics.py  test_model.py
