[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dronedetection"
version = "0.1.0"
description = "Drone audio binary classification (drone vs no-drone)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "torchvision>=0.17",
    "torch-audiomentations>=0.11",
    "librosa>=0.10",
    "soundfile>=0.12",
    "scikit-learn>=1.4",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.16",
    "onnx>=1.15",
    "onnxruntime>=1.17",
    "matplotlib>=3.8",
    "pandas>=2.1",
    "datasets>=2.16",
    "numpy>=1.26",
    "tqdm>=4.66",
    "audioread>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dronedetection"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
